--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 #banner{
     background-size: cover;
     color :white;
-    height :500px;
+    height :428px;
 }
 #banner-content{
     margin-left: 30px;
@@ -48,14 +48,16 @@ body{
     background-color: #e6e6e6;
     transition: all 0.2s;
 }
+
 .banner-fade{
-    height: 7.4rem;
+    height:7.4rem;
     background-image: linear-gradient(
-        280deg,
+        180deg,
         transparent,
         rgba(37,37,37,0.61),
-        #111,
+        #111
     );
+   
 }
 .mrow{
     margin-left: 20px;
@@ -80,4 +82,21 @@ body{
 }
 .image:hover{
     transform: scale(1.08);
+}
+.largerimage{
+    max-height: 250px;
+}
+.con{
+    width: 60%;
+    display :flex;
+    justify-content: space-between;
+    max-height: 500px;
+    
+}
+#movpos img {
+    max-height: 500px;
+}
+.details{
+    padding :10px 20px;
+
 }
