--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 *{
     margin: 0;
 }
-
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #111;
-    color: white;
-    
+    color: white;    
 }
 #banner{
     background-size: cover;
@@ -32,7 +30,7 @@ body{
     font-size: 0.8rem;
     max-width: 360px;
 }
-.ban-btn{
+.ban-btn , button{
     cursor: pointer;
     color: white;
     outline: none;
@@ -43,7 +41,7 @@ body{
     background-color: rgba(51,51,51,0.5);
     padding: 0.5rem 2rem;
 }
-.ban-btn:hover{
+.ban-btn:hover , button:hover{
     color:#000;
     background-color: #e6e6e6;
     transition: all 0.2s;
@@ -88,15 +86,57 @@ body{
 }
 .con{
     width: 60%;
-    display :flex;
+    display :none;
     justify-content: space-between;
     max-height: 500px;
-    
+    margin :20px auto; 
+    background-color: black;   
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%, -50%); */
 }
 #movpos img {
     max-height: 500px;
 }
 .details{
     padding :10px 20px;
+}
+#title{
+    font-size: 3rem;
+    font-weight: 800;
+    font-family: monospace;
 
+}
+.smalldetails{
+    display: flex;
+    padding: 0px;
+}
+#lan{
+    border-left: 2px solid white;
+    border-right: 2px solid white ;
+}
+.smalldetails p {
+    padding: 1px 10px;
+}
+#disc{
+    font-size: 0.8rem;
+    padding:0.1rem;
+    line-height: 1.3rem;
+
+}
+#play {
+    margin-top: 20px;
+}
+#close{
+    position: relative;
+    right: 10px;
+    height: fit-content;
+    top: 10px;
+    border: none;
+    border-radius: 150px;
+    font-size: 20px;
+    padding:5px 12px;
+    cursor: pointer;
+    font-weight: 600;
 }
