--- a/style.css
+++ b/style.css
@@ -1,6 +1,43 @@
 *{
     margin: 0;
 }
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #33333336;
+}
+li {
+    display: inline;
+    float: right;
+  }
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  
+li a:hover {
+    background-color: #111;
+  }
+#logo{
+    margin-top: 10px;
+    margin-left: 5px;
+  }
+nav{
+    z-index: 99999;
+    
+}
+.navbar{
+    position: fixed;
+    top: 0%;
+    width: 100%;
+    box-sizing: border-box;
+}
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #111;
@@ -94,7 +131,7 @@ body{
     position: fixed;
     left: 50%;
     top: 50%;
-    transform:translate(-50%, -50%); */
+    transform:translate(-50%, -50%); 
 }
 #movpos img {
     max-height: 500px;
@@ -102,10 +139,11 @@ body{
 .details{
     padding :10px 20px;
 }
-#title{
+#titlee{
     font-size: 3rem;
     font-weight: 800;
     font-family: monospace;
+    
 
 }
 .smalldetails{
@@ -117,7 +155,7 @@ body{
     border-right: 2px solid white ;
 }
 .smalldetails p {
-    padding: 1px 10px;
+    padding: 4px 5px;
 }
 #disc{
     font-size: 0.8rem;
