--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 *{
     margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 ul{
     list-style-type: none;
@@ -18,6 +19,7 @@ li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-family:monospace;
   }
   
   
@@ -31,6 +33,7 @@ li a:hover {
 nav{
     z-index: 99999;
     
+    
 }
 .navbar{
     position: fixed;
@@ -39,7 +42,7 @@ nav{
     box-sizing: border-box;
 }
 body{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    /* font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     background-color: #111;
     color: white;    
 }
@@ -66,6 +69,7 @@ body{
     height:80px;
     font-size: 0.8rem;
     max-width: 360px;
+    font-family:monospace;
 }
 .ban-btn , button{
     cursor: pointer;
@@ -77,6 +81,7 @@ body{
     border-radius: 2px;
     background-color: rgba(51,51,51,0.5);
     padding: 0.5rem 2rem;
+    font-family:monospace;
 }
 .ban-btn:hover , button:hover{
     color:#000;
@@ -156,15 +161,18 @@ body{
 }
 .smalldetails p {
     padding: 4px 5px;
+    font-family:monospace;
 }
 #disc{
     font-size: 0.8rem;
     padding:0.1rem;
     line-height: 1.3rem;
+    font-family:monospace;
 
 }
 #play {
     margin-top: 20px;
+    font-family:monospace;
 }
 #close{
     position: relative;
