--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body{
     background-color: #111;
     color: white;    
 }
+h2{
+    font-family:monospace;
+
+}
 #banner{
     background-size: cover;
     color :white;
